# bevplace_python

./: .gitignore  README.md  TODO_CONTRACT.md  pyproject.toml
.cursor/rules/: general.mdc
docs/: cli_index_build.md  cli_localize.md
notebooks/: demo_bevplace_retrieval.ipynb  demo_localizer.ipynb
src/bevplace/: __init__.py
src/bevplace/cli/: __init__.py  common.py  index_build.py  localize.py
src/bevplace/core/: types.py
src/bevplace/models/: netvlad.py  rein.py  rem.py  weights.py
src/bevplace/pipeline/: localizer.py
src/bevplace/pose/: matching.py  ransac.py  sampling.py
src/bevplace/preprocess/: bev.py
src/bevplace/retrieval/: __init__.py  index.py
tests/: test_bev.py  test_cli.py  test_localizer.py  test_ransac.py  test_rein.py  test_retrieval.py  test_sampling_matching.py
