[project]
name = "bevplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
torch = [
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
exclude = [
    "sources/"
]
line-length = 110
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
