[project]
name = "bevplace"
version = "0.3.0"
description = "BEVPlace++ inference-ready Python package for LiDAR-based place recognition and 3-DoF localization."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "numpy>=1.26",
]

[project.scripts]
bevplace = "bevplace.cli:main"

[project.optional-dependencies]
torch = [
    "torch==2.5.1",
    "torchvision==0.20.1",
]
faiss = [
    "faiss-cpu>=1.8.0.post1",

]
notebook = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
open3d = [
    "open3d>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "faiss-cpu>=1.8.0.post1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
exclude = [
    "sources/"
]
line-length = 110
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
